--- a/template/master.twig
+++ b/template/master.twig
@@ -18,6 +18,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
         {% endif %}
     </title>
 
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="{{composer_base}}/vendor/fortawesome/font-awesome/css/all.min.css">
 
     <!-- DataTables -->
     <link rel="stylesheet" href="{{system_base}}/plugins/datatables-bs4/css/dataTables.bootstrap4.css">
