--- a/template/master.twig
+++ b/template/master.twig
@@ -153,7 +153,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 {% set body = app.user.style.body|join(' ') %}
 
 
-<body class="hold-transition sidebar-mini sidebar-open layout-fixed {{body}}">
+<body class="hold-transition sidebar-mini layout-fixed {{body}}">
     <div class="wrapper">
 
         <!-- Navbar -->
