--- a/template/master.twig
+++ b/template/master.twig
@@ -51,7 +51,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
     <script src="{{system_base}}/plugins/ace/src-min-noconflict/ace.js"></script>
 
 
-    <link rel="stylesheet" href="{{system_base}}/alt-component/dist/alt-component.css">
+    <!-- link rel="stylesheet" href="{{system_base}}/alt-component/dist/alt-component.css" -->
     <script src="{{system_base}}/alt-component/dist/alt-component.umd.min.js"></script>
 
     <!-- REQUIRED SCRIPTS -->
