--- a/template/master.twig
+++ b/template/master.twig
@@ -52,7 +52,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
 
     <!-- link rel="stylesheet" href="{{system_base}}/alt-component/dist/alt-component.css" -->
-    <script src="{{system_base}}/alt-component/dist/alt-component.umd.min.js"></script>
+    <script src="{{system_base}}/alt-component/dist/alt-component.umd.min.js?v={{app.version}}"></script>
 
     <!-- REQUIRED SCRIPTS -->
 
@@ -132,8 +132,8 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <!-- webpack -->
 
-    <script src="{{system_base}}/dist/main.js" defer></script>
-    <script src="{{system_base}}/dist/plugin.js"></script>
+    <script src="{{system_base}}/dist/main.js?v={{app.version}}" defer></script>
+    <script src="{{system_base}}/dist/plugin.js?v={{app.version}}"></script>
 
 
     <!-- Custom js -->
