--- a/pages/index.twig
+++ b/pages/index.twig
@@ -19,7 +19,7 @@
     <!-- Vue -->
     <script src="{{system_base}}/plugins/vue/vue.js"></script>
 
-    <script src="{{system_base}}/dist/index.js" defer></script>
+    <script src="{{system_base}}/dist/index.js?v={{app.version}}" defer></script>
 
 </head>
 
