--- a/pages/User/test2.twig
+++ b/pages/User/test2.twig
@@ -1,7 +1,9 @@
 <div id="div1">
-    <rt3-table>
-        <rt3-table-column label="Hello"></rt3-table-column>
-    </rt3-table>
+    <el-button type="info">submit</el-button>
+    <el-button type="danger">submit</el-button>
+    <el-button type="warning">submit</el-button>
+    <el-button type="primary">submit</el-button>
+    <el-button type="success">submit</el-button>
 </div>
 
 <script>
