--- a/template/master.twig
+++ b/template/master.twig
@@ -29,7 +29,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
     <!-- Google Font: Source Sans Pro -->
     <!-- link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet"-->
-
+    <link rel="stylesheet" href="{{system_base}}/css/element-ui/index.css">
     <link rel="stylesheet" href="{{system_base}}/css/main.css">
 
     <!-- OverlayScrollbars -->
