--- a/pages/User/list2.twig
+++ b/pages/User/list2.twig
@@ -1,6 +1,8 @@
 <script>
     function SelectAll(){
         var v=document.getElementById("rt").__vue__.$parent;
-        v.selectAll();
+    //    v.selectAll();
     }
+
+
 </script>
